updated to match current workflow

--- a/R/hd_class.rmd
+++ b/R/hd_class.rmd
@@ -9,44 +9,56 @@ Berger et al (2008) defined the binding preferences of X homeodomain transcripti
 1. Count the number of HD sites within a given sequence
     * Dnmt3a-targeted conserved regions (N = 7903)
     * Vista enhancers (N = 1756)
-2. Cluster training set
-    * HOPACH
-    * Hclust
-    * Proximity matrix from random forest
+    * Conserved regions within vista enhancers (N = 4020)
+      * phastConsElements30way_len50_inter_vista2_masked.fa
+      
+2. Cluster training set (1/10 of data)
+    * Algorithms
+      * HOPACH
+      * Hclust
+      * Proximity matrix from random forest
+  
 3. Classify remainder using random forest
 
 ### Code
 
 #### 1. Count the number of HD sites within a given sequence
 
-Load source file and read in data
-```{r}
-suppressPackageStartupMessages(source("~/src/seqAnalysis/R/hd.R"))
+Run Jellyfish to construct hash tables of 8mer counts within a given sequence.
+
+First set up directory of fasta files with individual sequences. In R,
 ```
-```
-vista <- read.DNAStringSet("~/data/vista/vista.fa")
-```
-Count the number of occurences of each 8-mer above a given E-score threshold for each sequence
-```
-vista.count <- countHDsites(vista, .45)
+sapply(names(vista.fa), function(x) write.XStringSet(vista.fa[x], paste("~/data/vista/vista_masked_8mer/", x, ".fa", sep=""), format="fasta))
 ```
 
-Normalize counts by sequence length
+For-loop through `jellyfish count` function. While in sequence directory:
 ```
-vista.count.norm <- norm_hd_matrix(vista.count, vista)
-```
-
-```{r}
-# Read in matrix of 8-mer occurences
-# Rows: genomic regions
-# Columns: HD
-
-vista.count <- readRDS("~/data/hughes/vista_count.rds")
+for f in `ls`; do jellyfish count -o ../phastConsElements30way_len50_inter_vista2_masked_8mer/"$f" 
+-m 8 -c 3 -s 100000 -t 6 -C $f; done
 ```
 
-
-
-```{r fig.width=7, fig.height=6}
-plot(cars)
+Convert hash tables to fasta output in which the header the the number of occurences of the sequence. While in 'phastConsElements30way_len50_inter_vista2_masked_8mer' directory:
 ```
+for f in `ls`; do jellyfish dump -o "$f".fa $f; done
+```
+
+Assemble count matrix in R. 'parse_kmer_counts' returns a matrix with rows corresponding to each sequence and columns to each HD in ESCORE_MAT. 
+```
+source("~/src/seqAnalysis/R/hd.R")
+counts <- parse_kmer_counts("~/data/vista/phastConsElements30way_len50_inter_vista2_masked_8mer")
+```
+
+Normalize counts by expected binomial occurences
+```
+vista.cons <- read.DNAStringSet("~/data/vista/phastConsElements30way_len50_inter_vista2_masked.fa")
+vista.count.norm <- norm_by_binom(counts, vista.cons)
+```
+
+Threshold count matrix by significant E-score (0.45) and remove outliers.
+```
+vista.count.norm.thresh <- threshold_count_matrix(vista.count.norm)
+q <- quantile(rowSums(vista.count.norm.thresh), probs=c(.01, .99))
+vista.counts.norm.thresh.98 <- vista.counts.norm.thresh[rowSums(vista.counts.norm.thresh)>=q[1]&rowSums(vista.counts.norm.thresh)<=q[2],]
+```
+
 
